[package]
name = "acrusto"
version = "0.1.0"
authors = ["shybyte <ein@volloeko.de>"]
edition = "2018"

[dependencies]
reqwest = "0.9.5"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
clap = "2.32.0"
hyper = "0.12.19"
mime = "0.3.12"
dirs = "1.0.4"
envy = "0.3"
log = "0.4"
simple_logger = "1.0.1"

[profile.release]
opt-level = "z"
lto = true