[package]
name = "acrusto"
version = "0.1.0"
authors = ["shybyte <ein@volloeko.de>"]
edition = "2018"

[dependencies]
reqwest = "0.9.5"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
clap = "2.32.0"
hyper = "0.12.19"
mime = "0.3.12"
dirs = "1.0.4"
log = "0.4"
simple_logger = "1.0.1"
lazy_static = "1.2.0"
open = "1.2.2"
glob = "0.2.11"
ansi_term = "0.11.0"
uuid = "0.7.1"
regex = "1"
threadpool = "1.0"
indicatif = "0.11.0"
console = "0.7.2"
ctrlc = { version = "3", features = ["termination"] }
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

[profile.release]
opt-level = "s"
lto = true

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
# sudo apt install musl-tools
# cargo build -release --target=x86_64-unknown-linux-musl --features vendored
vendored = ["openssl-sys/vendored"]